# xiaoyaosearch

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_STATUS.md  LICENSE  QUICKSTART.md  README.md  README_EN.md  RELEASE.md  ROADMAP.md  package.json  pre-commit.sh  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/hooks/: append-default.md
.github/workflows/: ci.yml  release.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  alembic.ini  database_cli.py  init_db.py  main.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  quick_start.py  requirements-dev.txt  requirements.txt  requirements.txt.bk  setup.bat  setup.sh  setup_env.py  test_api_connectivity.py  test_chunk_functionality.py  test_chunk_service.py  test_file_index_system.py  test_simple_file_index.py
backend/alembic/: env.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  api.py
backend/api/v1/endpoints/: directories.py  files.py  search.py  tags.py  user_settings.py
backend/app/: deps.py
backend/app/api/: __init__.py  config.py  database.py  deps.py  exceptions.py  index.py  middleware.py  realtime_msg.py  search.py  settings.py  system.py  websocket.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: database.py  directories.py  files.py  search.py  settings.py  users.py
backend/app/config/: chunk_config.py  config.py  image_prompts.py  mvp_config.py
backend/app/core/: config.py  database.py  index_manager.py  openapi.py
backend/app/models/: __init__.py  ai_model.py  app_settings.py  file.py  file_chunk.py  file_content.py  index_job.py  search_history.py
backend/app/schemas/: __init__.py  directory.py  enums.py  file.py  requests.py  responses.py  search.py  user.py
backend/app/services/: __init__.py  ai_model_manager.py  bge_embedding_service.py  chunk_index_service.py  chunk_search_service.py  chunk_service.py  clip_service.py  content_parser.py  directory_service.py  file_index_service.py  file_scanner.py  file_service.py  image_search_service.py  llm_query_enhancer.py  metadata_extractor.py  ollama_service.py  search_service.py  settings_service.py  user_service.py  whisper_service.py
backend/app/utils/: snowflake.py
backend/core/: __init__.py  config.py  database.py
backend/db/: __init__.py  base.py
backend/migrations/: env.py
backend/schemas/: __init__.py  directory.py  file.py  search.py  tag.py  user_settings.py
backend/services/fulltext/: fulltext_index.py  fulltext_manager.py
backend/services/vector/: vector_index.py  vector_search_manager.py
backend/tests/: __init__.py  conftest.py  test_dao.py  test_database.py  test_database_management.py  test_fulltext_indexing.py  test_index_manager.py  test_models.py  test_vector_indexing.py
docs/: 00-mrd.md  01-prd.md  02-原型.md  03-技术方案.md  04-开发任务清单.md  05-开发排期表.md  api.md  code-arch.md  data-model.md  deploy.md  prd.md  qa.md  system-process.md  tech-stack.md  ui.md  前端透明的分块方案.md  开发进度.md  接口文档.md  搜索逻辑.md  数据库设计文档.md  架构决策.md  模型选型.md  索引构建逻辑.md  项目决策.md  项目提示词.md
docs/base/: 00-精益MRD-模版.md  01-精简PRD-模版.md  02-精简原型-标准.md  03-技术方案文档-模版.md  04-开发任务清单-模版.md  初始提示词.md  初始需求.md  精益开发流程.md
docs/demo/: README.md  help.html  index-manage.html  index.html  navigation.html  package-lock.json  package.json  search.html  settings.html  start.bat  vite.config.ts  快速启动指南.md
docs/demo/src/: HelpApp.vue  IndexApp.vue.backup  IndexAppSimple.vue  SearchApp.vue  SettingsApp.vue  SettingsAppBasic.vue  SettingsAppFinal.vue  SettingsAppFixed.vue  SettingsAppFixedIcons.vue  SettingsAppSimple.vue  SettingsAppWorking.vue  help.ts  index.ts  search.ts  settings.ts
docs/ui-design/mvp/: components.html  design-guide.html  favorites-page.html  index-page.html  index.html  search-page.html  settings-page.html
docs/技术文档/: clip.md  electron-vite.md  faster-whisper.md
docs/接口mock数据集/: README.md
docs/接口mock数据集/AI模型配置/: 更新模型配置.json  测试模型.json  获取模型列表.json
docs/接口mock数据集/WebSocket消息/: 搜索建议推送.json  索引进度推送.json
docs/接口mock数据集/搜索服务/: 多模态搜索.json  搜索历史.json  文本搜索.json
docs/接口mock数据集/系统管理/: 更新设置.json  系统健康检查.json  获取设置.json
docs/接口mock数据集/索引管理/: 创建索引.json  删除索引.json  索引列表.json  索引状态查询.json
docs/架构决策/: AD-20251210-04-配置管理优化.md
docs/测试数据/: long_test.txt  test.doc  test.txt  test_data.xls  test_data.xlsx  test_incremental_log.txt  test_incremental_new.txt
docs/测试用例/: test-data-index.md  test-data-search.md  test-data-system.md
docs/运营文档/: 产品开源发布宣传文档.md
docs/高保真原型/: 项目说明.md
docs/高保真原型/v0.1/: .env.development  .env.example  .gitignore  QUICK_START.md  README.md  build.bat  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  start.bat  test-simple.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/高保真原型/v0.1/src/: App-debug.vue  App-icon-test.vue  App-simple.vue  App.vue  main.ts
docs/高保真原型/v0.1/src/api/: config.ts  search.ts
docs/高保真原型/v0.1/src/components/: SearchResultCard.vue
docs/高保真原型/v0.1/src/pages/: HelpPage.vue  (+4 more)
frontend/: .eslintrc-auto-import.json  .eslintrc.cjs  .eslintrc.js  .prettierrc  README.md  electron-builder.json  electron-builder.yml  electron.vite.config.ts  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.web.json  vite.config.ts
frontend/src/main/: index.ts  main.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/: App.tsx  auto-imports.d.ts  components.d.ts  index.html  main.tsx
frontend/src/renderer/pages/: FavoritesPage.tsx  IndexPage.tsx  SearchPage.tsx  SettingsPage.tsx
frontend/src/renderer/services/: api.ts
frontend/src/renderer/src/: App.vue  env.d.ts
frontend/src/renderer/styles/: global.css
frontend/src/shared/types/: index.ts
openspec/: project.md
openspec/changes/implement-xiaoyao-search-mvp/: proposal.md  tasks.md
openspec/changes/implement-xiaoyaosearch-core/: proposal.md  tasks.md
scripts/: build.sh  quick_download.py  setup_env.bat  setup_env.sh  start_dev.bat  start_dev.sh  test-data-config.txt
tools/setup/: development.md
(+60 files in other folders)
